--- a/a-propos.html
+++ b/a-propos.html
@@ -9,9 +9,7 @@
 </head>
 <body>
   <div id="particles-js"></div>
-  <div id="loader">
-    <div class="spinner"></div>
-  </div>
+  <div id="loader"><div class="spinner"></div></div>
   <header>
     <div class="menu-toggle" id="menu-toggle">☰</div>
     <button id="darkModeToggle" style="margin-left: 1rem;">🌓</button>
@@ -26,9 +24,14 @@
     </nav>
   </header>
 
-  <section id="about">
-    <h2>ℹ️ À propos</h2>
-    <p>Bienvenue dans mon univers. Je suis Rapido, passionné par le code, l’IA, le design et l’innovation. À travers Studio Rapido, je transforme les idées en expériences digitales uniques. Mon objectif est de donner vie à vos projets avec créativité, performance et un soupçon de magie technologique. Que ce soit pour un site vitrine, une application interactive ou une interface animée, chaque création est pensée pour marquer les esprits et s’adapter à vos besoins.</p>
+  <section id="a-propos">
+    <div class="hero-content">
+      <h1>ℹ️ À propos de Studio Rapido</h1>
+      <p>Chez Studio Rapido, on ne se contente pas de coder — on façonne des expériences numériques vivantes, modernes et personnalisées. De la création de sites animés à l’intégration d’intelligences artificielles sur mesure, chaque projet est une aventure créative.</p>
+      <p>🎯 Objectif : t’offrir une présence en ligne qui claque, qui parle, et qui te ressemble.</p>
+      <p>💡 Avec une approche centrée utilisateur, je mixe design animé, interactivité poussée et technologies modernes pour booster ton image.</p>
+      <p>👨‍💻 Du front-end stylé au back-end solide, en passant par des assistants IA ou du contenu interactif, Rapido a toujours une solution.</p>
+    </div>
   </section>
 
   <footer class="site-footer">
@@ -48,57 +51,46 @@
       origin: 'bottom',
       interval: 200
     });
-
+    document.querySelectorAll('section').forEach(section => section.classList.add('visible'));
     const toggle = document.getElementById('menu-toggle');
     const nav = document.querySelector('nav ul');
-    toggle.addEventListener('click', () => {
-      nav.classList.toggle('show');
-    });
-
+    toggle.addEventListener('click', () => nav.classList.toggle('show'));
     const darkToggle = document.getElementById('darkModeToggle');
-
-    // Appliquer le thème sombre si enregistré
     if (localStorage.getItem('theme') === 'dark') {
       document.body.classList.add('dark-mode');
-      document.querySelectorAll('section').forEach(section => section.classList.add('visible'));
     }
-
     darkToggle.addEventListener('click', () => {
       document.body.classList.toggle('dark-mode');
-      if (document.body.classList.contains('dark-mode')) {
-        localStorage.setItem('theme', 'dark');
-      } else {
-        localStorage.setItem('theme', 'light');
+      localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
+    });
+  </script>
+  <script>
+    window.addEventListener('load', () => {
+      const loader = document.getElementById('loader');
+      loader.style.opacity = '0';
+      loader.style.transition = 'opacity 0.5s ease';
+      setTimeout(() => loader.style.display = 'none', 500);
+    });
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": { "value": 50 },
+        "size": { "value": 3 },
+        "color": { "value": "#38bdf8" },
+        "line_linked": {
+          "enable": true,
+          "color": "#38bdf8"
+        }
+      },
+      "interactivity": {
+        "events": {
+          "onhover": { "enable": true, "mode": "repulse" }
+        }
       }
     });
-    document.querySelectorAll('section').forEach(section => section.classList.add('visible'));
   </script>
-<script>
-  window.addEventListener('load', () => {
-    const loader = document.getElementById('loader');
-    loader.style.opacity = '0';
-    loader.style.transition = 'opacity 0.5s ease';
-    setTimeout(() => loader.style.display = 'none', 500);
-  });
-</script>
-<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-<script>
-  particlesJS("particles-js", {
-    "particles": {
-      "number": { "value": 50 },
-      "size": { "value": 3 },
-      "color": { "value": "#38bdf8" },
-      "line_linked": {
-        "enable": true,
-        "color": "#38bdf8"
-      }
-    },
-    "interactivity": {
-      "events": {
-        "onhover": { "enable": true, "mode": "repulse" }
-      }
-    }
-  });
-</script>
+  <script src="script.js" defer></script>
 </body>
 </html>
