Ajout bloc SEO optimisé dans la page À propos

--- a/a-propos.html
+++ b/a-propos.html
@@ -32,6 +32,15 @@
       <p>💡 Avec une approche centrée utilisateur, je mixe design animé, interactivité poussée et technologies modernes pour booster ton image.</p>
       <p>👨‍💻 Du front-end stylé au back-end solide, en passant par des assistants IA ou du contenu interactif, Rapido a toujours une solution.</p>
     </div>
+    <section class="seo-boost">
+      <h2>Studio Rapido - Création de sites web & univers digitaux</h2>
+      <p>
+        Studio Rapido est un studio digital basé en Île-de-France, spécialisé dans la création de sites web modernes, 
+        responsives et animés pour les indépendants, artistes, créateurs de contenu et entreprises. 
+        Nous développons des expériences interactives sur-mesure, intégrons des IA vocales (type assistant JARVIS), 
+        et proposons des solutions rapides et stylées. Besoin d’un site vitrine ? Parlons-en.
+      </p>
+    </section>
   </section>
 
   <footer class="site-footer">
