Ajout de la balise meta description optimisée

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Studio Rapido crée des sites web modernes, animés et responsives pour indépendants, artistes et entreprises. Basé en Île-de-France. Création rapide, style garanti." />
   <title>À propos - Studio Rapido</title>
   <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
+  <link rel="robots" href="robots.txt" />
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
