🔥 Ajout synchronisation devis + formule sélectionnée + design cohérent

--- a/a-propos.html
+++ b/a-propos.html
@@ -19,6 +19,7 @@
         <li><a href="a-propos.html" class="active">ℹ️ À propos</a></li>
         <li><a href="services.html">🧰 Services</a></li>
         <li><a href="portfolio.html">🖼️ Portfolio</a></li>
+        <li><a href="tarifs.html">💰 Tarifs</a></li>
         <li><a href="contact.html">📞 Contact & Devis</a></li>
       </ul>
     </nav>
