--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta property="og:title" content="Studio Rapido – Création web stylée, animée & sur-mesure 🚀" />
+  <meta property="og:description" content="Ton univers digital : design animé, IA intégrée, site responsive. Créé en Île-de-France. Vite fait, bien stylé." />
+  <meta property="og:image" content="https://studio-rapido.com/assets/preview.jpg" />
+  <meta property="og:url" content="https://studio-rapido.com/" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="description" content="Studio Rapido crée des sites web modernes, animés et responsives pour indépendants, artistes et entreprises. Basé en Île-de-France. Création rapide, style garanti." />
   <title>À propos - Studio Rapido</title>
   <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml" />
   <link rel="robots" href="robots.txt" />
+  <link rel="icon" type="image/png" href="assets/favicon.png" />
+  <link rel="apple-touch-icon" href="assets/favicon.png">
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
@@ -42,6 +49,7 @@
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
         <li><a href="services.html">🧰 Services</a></li>
         <li><a href="portfolio.html">🖼️ Portfolio</a></li>
+        <li><a href="tarifs.html">💰 Tarifs</a></li>
         <li><a href="contact.html">📞 Contact & Devis</a></li>
       </ul>
     </nav>
@@ -279,6 +287,9 @@
       </ul>
     </div>
   </div>
+  <section class="seo-image">
+    <img src="assets/logo-seo.png" alt="Logo Studio Rapido" width="512" height="512" style="display:none;" />
+  </section>
 </body>
 <style>
   .aurion-toggle {
