--- a/services.html
+++ b/services.html
@@ -21,19 +21,22 @@
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
         <li><a href="services.html" class="active">🧰 Services</a></li>
         <li><a href="portfolio.html">🖼️ Portfolio</a></li>
+        <li><a href="tarifs.html">💰 Tarifs</a></li>
         <li><a href="contact.html">📞 Contact & Devis</a></li>
       </ul>
     </nav>
   </header>
 
   <section id="services">
-    <h2>🧰 Mes Services</h2>
-    <p>Chez Studio Rapido, je propose une gamme complète de services pensés pour donner vie à des projets numériques uniques, modernes et percutants :</p>
+    <h2>🧰 Nos Services sur-mesure</h2>
+    <p>Studio Rapido t’accompagne avec des solutions créatives et puissantes adaptées à chaque niveau de projet. Voici ce que tu peux demander dans ton devis :</p>
     <ul class="services-list">
-      <li>🔧 Création de sites web modernes et responsives – conçus pour offrir une expérience utilisateur optimale sur tous les appareils.</li>
-      <li>🎬 Réalisation d’identités visuelles animées – logos, interfaces et effets graphiques dynamiques pour capter l’attention dès la première seconde.</li>
-      <li>🤖 Développement d’assistants IA personnalisés – des intelligences artificielles sur mesure pour automatiser, informer ou divertir.</li>
-      <li>🧠 Conseil en stratégie digitale – pour optimiser ta présence en ligne et transformer tes idées en résultats concrets.</li>
+      <li>🌐 Création de site vitrine (1 à 5 pages) responsive et design personnalisé</li>
+      <li>🖌️ UI/UX design sur-mesure avec animations visuelles (scroll, particules…)</li>
+      <li>⚙️ Intégration de formulaires interactifs, blog, et newsletter</li>
+      <li>🔍 Optimisation SEO pour être bien référencé sur Google</li>
+      <li>🤖 Développement de fonctionnalités avancées (IA, chatbot, API, Firebase…)</li>
+      <li>🧠 Conseil et accompagnement personnalisé (1 à 3 mois)</li>
     </ul>
   </section>
 
