--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,7 @@
         <li><a href="a-propos.html">ℹ️ À propos</a></li>
         <li><a href="services.html">🧰 Services</a></li>
         <li><a href="portfolio.html" class="active">🖼️ Portfolio</a></li>
+        <li><a href="tarifs.html">💰 Tarifs</a></li>
         <li><a href="contact.html">📞 Contact & Devis</a></li>
       </ul>
     </nav>
